Adding 2nd page

--- a/contact.html
+++ b/contact.html
@@ -53,57 +53,65 @@
 
 </header>
 
-<section class="container-fluid">
+  
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/fullharry.jpg">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>HARRY POTTER</h5>
+          <p>THE HERO</p>
+        </div>
+      </div>
+
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="assets/fullemma.jpg">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>EMMA WATSON</h5>
+          <p>2ND HERO</p>
+        </div>
+      </div>
+
+      <div class="carousel-item">
+        <img class="d-block w-100" src="assets/fullteam.jpg">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Full Team.</h5>
+          <p></p>
+        </div>
+      </div>
+
+
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+
+<section class="contact container">
   <div class="row">
-    <div class="col-12 staffimage">
-
-        <Button class="offset-lg-3 col-lg-3 col-6 btn btn-primary btn-lg active">
-          <a href="D:\projects\Multimedia\project1\contact.html">Staff Gallery</a>
-        </Button>
-
+    <div class="col-md-6">
+      <h1>Contact the staff</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti explicabo, temporibus accusantium aliquid, ducimus suscipit aliquam pariatur, blanditiis beatae molestiae perferendis praesentium dolores officiis earum fugit magni adipisci dolor inventore.</p>
+    </div>
+    <div class="col-md-6">
+      the form
     </div>
   </div>
 </section>
 
-<section class="team-staff container-fluid">
-  <div class="row">
 
-
-    <div class="harry-card col-md-3 col-sm-6 col-12" id="harry">
-      <img src="assets/daniel.jpg">
-      <h2>Daniel Radcliffe</h2>
-      <div>Daniel Jacob Radcliffe (born 23 July 1989)[1] is an English actor, producer, and singer. He is best known for playing Harry Potter in the Harry Potter film series during his adolescence and early adulthood.Born and raised in London, Radcliffe made his acting debut at age ten in BBC One's television film David Copperfield (1999), followed by his cinematic debut in The Tailor of Panama (2001).During this period, Radcliffe became one of the highest-paid actors in the world, gained worldwide fame, popularity, and critical acclaim, and received many accolades for his performances in the series.</div>
-    </div>
-
-    <div class="harry-card col-md-3 col-sm-6 col-12" id="emma">
-      <img src="assets/Emma.jpg">
-      <h2>Emma Watson</h2>
-      <div>Emma Charlotte Duerre Watson (born 15 April 1990)[3] is an English actress, model, and activist.She went on to star as Belle in the 2017 musical romantic fantasy Beauty and the Beast, and Meg March in the coming-of-age drama Little Women (2019), the latter of which was nominated for the Academy Award for Best Picture. Her other film roles include Regression, Colonia (both 2015), and The Circle (2017).From 2011 to 2014, Watson split her time between working on films and continuing her education, graduating from Brown University with a bachelor's degree in English literature in May 2014.which advocates for gender equality.</div>
-    </div>
-
-    <div class="harry-card col-md-3 col-sm-6 col-12" id="rupert">
-      <img src="assets/Ron.jpg">
-      <h2>Rupert Grint</h2>
-      <div>Rupert Alexander Lloyd Grint[2] (born 24 August 1988) is an English actor. He rose to prominence for his portrayal of Ron Weasley, one of the three main characters in the Harry Potter film series. Grint began to work outside of the Harry Potter franchise, playing a co-leading role in Thunderpants. He has had starring roles in Driving Lessons, a dramedy released in 2006, and Cherrybomb, a drama film of limited release in 2010. Grint co-starred with Bill Nighy and Emily Blunt in Wild Target, a comedy.</div>
-    </div>
-    <div class="harry-card col-md-3 col-sm-6 col-12" id="richard">
-      <img src="assets/prof.jpg">
-      <h2>Richard Harris</h2>
-      <div>Richard John Harris (1 October 1930 – 25 October 2002) was an Irish actor and singer. He appeared on stage and in many films, notably as Frank Machin in This Sporting Life, for which he was nominated for the Academy Award for Best Actor, and as King Arthur in the 1967 film Camelot, as well as the 1981 revival of the stage musical.He played an aristocrat captured by American Indians in A Man Called Horse (1970),</div>
-    </div>
-
-
-
-
-  </div>
-</section>
-
-<section class="container-fluid">
-  <div class="row">
-    <iframe class="col-12" height="550" src="https://www.youtube.com/embed/mObK5XD8udk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  </div>
-</section>
-
- 
     <footer class="my-footer">
       <div class="container">
         <div class="row">
