Completing 2nd Page

--- a/contact.html
+++ b/contact.html
@@ -99,14 +99,26 @@
   </div>
 
 
-<section class="contact container">
-  <div class="row">
-    <div class="col-md-6">
-      <h1>Contact the staff</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti explicabo, temporibus accusantium aliquid, ducimus suscipit aliquam pariatur, blanditiis beatae molestiae perferendis praesentium dolores officiis earum fugit magni adipisci dolor inventore.</p>
+
+<section class="contact container-fluid">
+  <div class="row">  
+    <div class="col-md-5 offset-md-1">
+      <h1> <i class="fa fa-phone"></i> Sending an message</h1>
+      <h4>Please send me a message please im lonely....</h4>
+     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore laudantium facilis quidem velit delectus cumque excepturi similique numquam explicabo? Aliquid, molestiae minus est voluptas deserunt a dolores odio voluptates aliquam!</p>
+      <img src="assets/4.jpg" width="100%">
     </div>
+
     <div class="col-md-6">
-      the form
+      <form method="get">
+        <input type="text" placeholder="Your name" required autofocus>
+        <input placeholder="Your Email Address" type="email" required>
+        <input placeholder="Your Phone Number (optional)" type="tel" required>
+        <input placeholder="Your Web Site (optional)" type="url" required>
+        <textarea placeholder="Type your message here...." tabindex="5" required></textarea>
+        <input type="submit" value="Sending...." class="submit">
+      </form>
+
     </div>
   </div>
 </section>
