--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
 
   <nav class="navbar navbar-dark harryPotter-color  navbar-expand-lg">
 
-    <a class="navbar-brand" href="#">Harrrs LOGO</a><!--****** TODO: ********/ -->
+    <img class="my-logo" src="assets/hp copy.svg">
     <button class="navbar-toggler collapsed" data-toggle="collapse" data-target="#harry-ul">
       <span class="navbar-toggler-icon"></span>
     </button>
